--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -3,11 +3,17 @@ name: Getting Started
 route: /
 ---
 
+import exampleGif from './assets/example.gif'
+
 ## Why axios-last
 
 Once you are seeking for a solution that only take the last value from multiple axios calls, `Rx.js` might be good choice.
 
 What if you don't like `Rx.js`? I am right here!!!
+
+Let's feel how it helps:
+
+<img src={exampleGif} alt="example" style={{ width: '100%' }} />
 
 ## Installation
 
