--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -45,7 +45,7 @@ for (let i = 0; i < 3; i++) {
     }
   }).then(res => {
     // only request with name === 2 received
-    // all previous requests were cancelled while subsequent made
+    // all previous requests were cancelled while subsequent request made
   })
 }
 ```
