refactor: use ts instead

--- a/docs/1_home.mdx
+++ b/docs/1_home.mdx
@@ -50,6 +50,8 @@ for (let i = 0; i < 3; i++) {
 }
 ```
 
+**With AxiosInstance specified**
+
 ```javascript
 import axios from 'axios'
 import { create } from 'axios-last'
